--- a/src/components/DeviceTable/DeviceTable.css
+++ b/src/components/DeviceTable/DeviceTable.css
@@ -14,6 +14,7 @@
   --padding: 6px 4px;
   width: 100%;
   border-collapse: collapse;
+  table-layout: fixed;
   min-width: 480px;
   font-size: 14px;
 }
